--- a/src/components/logo/style.css
+++ b/src/components/logo/style.css
@@ -1,18 +1,18 @@
 .logo {
   display: flex;
+  align-items: center;
   gap: 8px;
+  /* height: 42px; */
   transition: color 0.3s ease-in-out, border 0.3s ease-in-out;
 }
 
 .logo__link {
-  display: flex;
-  height: 42px;
-  cursor: pointer;
   font-family: 'Oswald', sans-serif;
   font-size: 28px;
   line-height: 34px;
   color: var(--color-blue-700);
   text-decoration: none;
+  cursor: pointer;
 }
 
 .logo__link:hover {
@@ -24,7 +24,7 @@
 }
 
 @media only screen and (max-width: 26.25em) {
-  .logo {
+  .logo__link {
     font-size: 24px;
     line-height: 30px;
     letter-spacing: -1px;
